--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
         <section class="py-16">
             <div class="container mx-auto px-4 lg:px-8 text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-6 text-apple-white tech-glow">联系我们</h2>
-                <p class="text-blue-200 mb-8 max-w-xl mx-auto">如有疑问，欢迎扫描下方二维码咨询</p>
+                <p class="text-blue-200 mb-8 max-w-xl mx-auto">访问https://www.zyufl.edu.cn/114 教务系统</p>
                 
                 <div class="flex flex-col items-center justify-center p-8 apple-border inline-block mx-auto shadow-tech backdrop-blur">
-                    <h3 class="text-xl font-semibold mb-4 text-apple-white">📱 扫码了解更多</h3>
+                    <h3 class="text-xl font-semibold mb-4 text-apple-white">📱立刻锁定位置 </h3>
                     <div id="qrcode" class="mx-auto mb-4"></div>
                     <p class="text-sm text-blue-200">微专业最新招生信息</p>
                 </div>
