--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
                     </div>
                 </div>
             </div>
+            <!-- 项目图片轮播开始 -->
+            <div id="project-carousel" class="relative max-w-3xl mx-auto mt-8 rounded-2xl overflow-hidden shadow-tech">
+                <button id="carousel-prev" class="absolute left-2 top-1/2 -translate-y-1/2 z-10 bg-[rgba(0,99,255,0.5)] hover:bg-tech-cyan text-white rounded-full w-10 h-10 flex items-center justify-center shadow-tech backdrop-blur transition-all"><svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor' class='w-6 h-6'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M15 19l-7-7 7-7' /></svg></button>
+                <div class="w-full h-64 bg-apple-gray flex items-center justify-center">
+                    <img id="carousel-image" src="" alt="项目图片" class="object-contain w-full h-full transition-all duration-500 rounded-2xl" loading="lazy" />
+                </div>
+                <button id="carousel-next" class="absolute right-2 top-1/2 -translate-y-1/2 z-10 bg-[rgba(0,99,255,0.5)] hover:bg-tech-cyan text-white rounded-full w-10 h-10 flex items-center justify-center shadow-tech backdrop-blur transition-all"><svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor' class='w-6 h-6'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 5l7 7-7 7' /></svg></button>
+                <div id="carousel-indicators" class="absolute bottom-3 left-1/2 -translate-x-1/2 flex gap-2"></div>
+            </div>
+            <!-- 项目图片轮播结束 -->
         </header>
 
         <!-- 特色与核心能力 -->
@@ -192,6 +202,12 @@
                     <h3 class="text-xl font-semibold mb-4 text-apple-white">📱立刻锁定位置 </h3>
                     <div id="qrcode" class="mx-auto mb-4"></div>
                     <p class="text-sm text-blue-200">微专业最新招生信息</p>
+                </div>
+                <!-- 新增微信公众号二维码区域 -->
+                <div class="flex flex-col items-center justify-center p-8 apple-border inline-block mx-auto shadow-tech backdrop-blur mt-8">
+                    <h3 class="text-xl font-semibold mb-4 text-apple-white">📢 微信公众号</h3>
+                    <div id="qrcode-wechat" class="mx-auto mb-4"></div>
+                    <p class="text-sm text-blue-200">扫码关注官方公众号</p>
                 </div>
             </div>
         </section>
