Add support for video in carousel and add Xu Xiake case

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                 <div class="w-full h-64 bg-apple-gray flex items-center justify-center">
                     <img id="carousel-image" src="" alt="项目图片"
                         class="object-contain w-full h-full transition-all duration-500 rounded-2xl" loading="lazy" />
+                    <video id="carousel-video" controls class="hidden object-contain w-full h-full rounded-2xl">
+                        您的浏览器不支持视频标签。
+                    </video>
                 </div>
                 <button id="carousel-next"
                     class="absolute right-2 top-1/2 -translate-y-1/2 z-10 bg-[rgba(0,99,255,0.5)] hover:bg-tech-cyan text-white rounded-full w-10 h-10 flex items-center justify-center shadow-tech backdrop-blur transition-all"><svg
