Fix video playback issues: add playsinline and force load

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                 <div class="w-full h-64 bg-apple-gray flex items-center justify-center">
                     <img id="carousel-image" src="" alt="项目图片"
                         class="object-contain w-full h-full transition-all duration-500 rounded-2xl" loading="lazy" />
-                    <video id="carousel-video" controls class="hidden object-contain w-full h-full rounded-2xl">
+                    <video id="carousel-video" controls playsinline webkit-playsinline
+                        class="hidden object-contain w-full h-full rounded-2xl">
                         您的浏览器不支持视频标签。
                     </video>
                 </div>
